# mini-cmake-qt-vtk-cgal

./: .gitignore  CMakeLists.txt
src/: main.cc  mainwindow.cc  mainwindow.h  part_slicing.cpp  part_slicing.h
test/: coplanar_tests.cpp
